Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,12 +127,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "italy = None # 'Italy'\n",
-    "italy = countries[-2]"
+    "italy = countries[-3]"
    ]
   },
   {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -152,10 +152,10 @@
     {
      "data": {
       "text/plain": [
-       "'Canada'"
+       "'Italy'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
