--- a/index.ipynb
+++ b/index.ipynb
@@ -173,12 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "mexico = None\n",
-    "mexico =countries[]"
+    "mexico =countries[+2]"
    ]
   },
   {
