--- a/index.ipynb
+++ b/index.ipynb
@@ -190,12 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "kindof_neighbors = None\n",
-    "kindof_neighbors ="
+    "kindof_neighbors =countries[2:5]"
    ]
   },
   {
