--- a/index.ipynb
+++ b/index.ipynb
@@ -218,7 +218,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # add code here\n",
+    "c"
    ]
   },
   {
