--- a/index.ipynb
+++ b/index.ipynb
@@ -214,21 +214,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-914d776a3bca>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-914d776a3bca>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    countries.append \"Malta\"\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "None # add code here\n",
-    "countries.append (\"Malta\")\"Malta\""
+    "countries.append (\"Malta\")"
    ]
   },
   {
@@ -244,7 +235,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "None # add code here\n",
+    "countries.append"
    ]
   },
   {
