--- a/index.ipynb
+++ b/index.ipynb
@@ -231,12 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "None # add code here\n",
-    "countries.append"
+    "countries.append(\"Thailand\")"
    ]
   },
   {
