Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = None # add code here\n"
+    "countries = None # add code here\n",
+    "countries []"
    ]
   },
   {
