Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -282,8 +282,7 @@
     }
    ],
    "source": [
-    "countries = None # add code here\n",
-    "countries[7]= \"USA\""
+    "countries[7]=\"U\"\n"
    ]
   },
   {
