--- a/index.ipynb
+++ b/index.ipynb
@@ -378,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = None"
+    "unique_countries = "
    ]
   },
   {
