--- a/index.ipynb
+++ b/index.ipynb
@@ -422,12 +422,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "num_of_repeats = None\n",
-    "num_of_repeats =len(countries)# 3"
+    "num_of_repeats =len(countries)# 3\n",
+    "num_of_repea"
    ]
   },
   {
