Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -422,13 +422,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_of_repeats = None\n",
     "num_of_repeats =len(countries)# 3\n",
-    "num_of_repea"
+    "num_of_repeats"
    ]
   },
   {
