--- a/index.ipynb
+++ b/index.ipynb
@@ -438,7 +438,7 @@
    ],
    "source": [
     "num_of_repeats = None\n",
-    "num_of_repeats =len(countries)# 3\n",
+    "num_of_repeats =len(unique_countries)# 3\n",
     "num_of_repeats"
    ]
   },
