Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -374,11 +374,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = list(set(countries)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
