Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -391,19 +391,19 @@
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
-       " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
+       "['Croatia',\n",
+       " 'South Korea',\n",
+       " 'Argentina',\n",
+       " 'Morocco',\n",
        " 'Italy',\n",
        " 'Malta',\n",
+       " 'Canada',\n",
        " 'Mexico',\n",
-       " 'Morocco',\n",
-       " 'South Korea',\n",
-       " 'USA'}"
+       " 'USA',\n",
+       " 'Finland']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
